<resources>
    <string name="app_name">My diary</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="login_with_google">Войти через Google</string>
    <string name="logbook">Журнал</string>
    <string name="settings">Настройки</string>
    <string name="statistics">Статистика</string>
    <string name="i_feel">Я чувствую</string>
    <string name="record1">%1$d запись</string>
    <string name="record2">%1$d записи</string>
    <string name="record5">%1$d записей</string>
    <string name="what_are_you_listening_now">Что вы сейчас чувствуете?</string>
    <string name="note">Запись</string>
    <string name="save">Сохранить</string>
    <string name="add_remind">Добавить напоминание</string>
    <string name="remind">Напоминание</string>
    <string name="colon">:</string>
    <string name="hours">Часы</string>
    <string name="minutes">Минуты</string>
    <string name="emotions_by_category">Эмоции\nпо категориям</string>
    <string name="most_frequent_emotions">Самые частые \nэмоции</string>
    <string name="your_mood_during_the_day">Ваше настроение в\nтечение дня</string>
    <string name="earn_morning">Раннее утро</string>
    <string name="morning">Утро</string>
    <string name="day">День</string>
    <string name="evening">Вечер</string>
    <string name="late_evening">Поздний вечер</string>
    <string name="emotions_by_day_of_the_week">Эмоции \nпо дням недели</string>
    <string name="choose_emotion">Выберите эмоцию, лучше всего описывающую, что вы сейчас чувствуете</string>
    <string name="edit_text">Введите текст</string>
    <string name="ok">ок</string>
    <string name="cansel">Отмена</string>
    <string name="add_log">Добавить запись</string>
    <string name="there_is_not_account">Нет аккаунтов, попробуйте зарегистрироваться</string>
    <string name="there_is_not_wifi">Нет интернет соединения</string>
    <string name="something_bad">Что-то пошло не так</string>
    <string name="hello">Здаравствуйте!</string>
    <string name="streak">серия</string>
    <string name="in_day">в день</string>
    <string name="hepl_wifi">Попобуйте: \n· подключиться к другой сети - \n мобильной или WI-FI,\n· отключить VPN или выбрать в нем Россию.\nКод ошибки: 20-02</string>
    <string name="truble_with_wifi">Неполадки с интернетом</string>
    <string name="understand">Понятно</string>
    <string name="biometric_login">Вход по биометрии</string>
    <string name="go_to_settings">Перейти в настройки</string>
    <string name="send_reminds">Присылать напоминания</string>
    <string name="sign_in_with_fingerprint">Вход по отпечатку пальца</string>


</resources>

