<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/no_wifi_background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:backgroundTint="#161328">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_margin="24dp"
        android:contentDescription="@null"
        android:src="@drawable/have_not_wifi_second" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/truble_with_wifi"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_gravity="start"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hepl_wifi"
        android:textColor="@color/statistics_grey"
        android:layout_gravity="start"
        android:textSize="14sp">
    </TextView>
    
    <Button
        android:id="@+id/confirm_button_no_wifif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_no_wifi_background"
        android:text="@string/understand"
        android:textAllCaps="false"
        android:textColor="#161328"
        />

</LinearLayout>